"Implemented Mongoose and Google Oauth 2.0"
